HttpUnit release notes

Known problems:
    1. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response.
       This behavior matches that currently used by IE and Navigator.

Limitations:
    1. JDK 1.2 or higher is required
    2. JavaScript support does not include document.write and some DOM properties


Revision History:
10-Oct-2002
Problems fixed:
    1. Window.open was implemented with parameters backwards in 8-Oct-2002 build
    2. Window.opener property was not returning undefined value for non-top-level windows in 8-Oct-2002 build

Additions:
    1. Added support for Window.parent
    2. Added support for Window.<subframe-name>
    3. Added WebWindow.getOpenedWindow() to return a window by its name.
    4. You may now close a window by calling window.close(). This will trigger any active listeners. If the window closed
       the main window, another window will be promoted to that status.
    5. Added support for Window.close() and Window.closed

 9-Oct-2002
Acknowledgements:
    Thanks to Richard Harris for adding stubs for various unimplemented JavaScript Window properties.
Additions:
    1. Added support for the following JavaScript Window properties: frames, name, opener, top
    2. Added do-nothing stubs for the Window properties and functions: closed, close(), moveTo(), focus(), setTimeout()
Problems fixed:
    1. ServletUnit was not supporting mappings for the default servlet.

 8-Oct-2002
Acknowledgements:
    Thanks to Richard Harris for adding support for the title attribute for links,
           for adding the JavaScript Navigator.platform property,
           for adding Javascript support for the Screen object,
           for pointing out the value of retaining the same ScriptingEngine instance for a ScriptableDelegate.

Additions:
    1. Links, forms, and images now have a readable title property.
    2. The navigator object now supports the readable 'platform' property.